<resources>
    <string name="app_name">DivingLog</string>
    <string name="text_number">No.</string>
    <string name="diving_number">1</string>
    <string name="diving_place">大瀬崎</string>
    <string name="text_close_left">（</string>
    <string name="diving_point">内湾</string>
    <string name="text_close_right">）</string>
    <string name="place">場所</string>
    <string name="hint1">地名を入力してください</string>
    <string name="place_name">地名</string>
    <string name="place_point">ポイント</string>
    <string name="date">日付</string>
    <string name="time">時間</string>
    <string name="start">開始</string>
    <string name="end">終了</string>
    <string name="depth">水深 ( m )</string>
    <string name="max">最大</string>
    <string name="ave">平均</string>
    <string name="bar">残圧 ( bar )</string>
    <string name="condition">コンディション</string>
    <string name="temp">気温(℃)</string>
    <string name="weather">天気</string>
    <string name="temp_water">水温(℃)</string>
    <string name="visibility">透明度(m)</string>
    <string name="buddy">バディ</string>
    <string name="navi">ナビ</string>
    <string name="member">メンバー</string>
    <string name="memo">メモ</string>
    <string name="picture">写真</string>
    <string name="hint">input</string>
    <string name="button_make_task">作成</string>
    <string name="dive_number">本数</string>
    <string name="dive_time">潜水時間</string>
    <string name="honme">本目</string>
    <string name="edit">編集</string>
    <string name="delete">削除</string>
    <string name="update">更新</string>
    <string name="string_sort">並び替え</string>
    <string name="content_description_edit">編集できます</string>
    <string name="content_description_delete">削除できます</string>
    <string name="button_add_picture">写真を追加</string>
    <string name="content_description_display_picture">選択した写真を表示します</string>
    <string name="dialog_delete_progress_text">削除中です</string>
    <string name="text_progress">実行中です…</string>
    <string name="diveNumber">本目</string>
</resources>