<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_log_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <TextView
        android:id="@+id/text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text_number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/list_diving_number"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/diving_number"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_number"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/list_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diving_place"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_close_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_close_left"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/list_place"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diving_point"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_close_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_close_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_close_right"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/list_point"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/list_button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/content_description_edit"
        android:onClick="onListEditButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="340dp" />

    <!--    <ImageButton-->
    <!--        android:id="@+id/list_button_delete"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginEnd="20dp"-->
    <!--        android:background="@null"-->
    <!--        android:contentDescription="@string/content_description_delete"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:srcCompat="@android:drawable/ic_menu_delete"-->
    <!--        tools:layout_editor_absoluteX="45dp"-->
    <!--        tools:layout_editor_absoluteY="10dp"-->
    <!--        android:onClick="onListDeleteButton"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>