...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_dive_number"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:autofillHints="@string/hint"
                        android:inputType="number"
                        android:text="@={main.diveNumber}"
...
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/place_name"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/edit_place"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:autofillHints="@string/hint"
                        android:inputType="text"
                        android:text="@={main.place}"
...
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/place_point"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/edit_point"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/hint"
                        android:inputType="text"
                        android:text="@={main.point}"
                        tools:ignore="LabelFor" />
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/edit_button_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{main.onEditClick}"
                        android:text="@string/update" />

                    <Button
...
