...
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/det_dive_number"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="17sp" />

                <TextView
...
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/place_name"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/det_place"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="49dp"
                    android:layout_marginTop="7dp"
                    android:gravity="start"
                    android:textSize="17sp" />
...
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/place_point"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/det_point"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:gravity="start"
                    android:textSize="17sp" />
...
